--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 </head>
 <body>
     <div class="wrapper">
-        Hello, Project
-    </div>
-    <h1>Tes34y34y34uy34ut</h1>
-    <div class="wegweh">
-        gerhreh
+        <header class="header container">
+            <div class="header__logo">
+                <img src="../img/running-man-2-64.png" alt="">
+            </div>
+            <div>
+
+            </div>
+        </header>
     </div>
 </body>
 </html>
