--- a/index.html
+++ b/index.html
@@ -5,18 +5,80 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=MuseoModerno:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="wrapper">
         <header class="header container">
             <div class="header__logo">
-                <img src="../img/running-man-2-64.png" alt="">
+                <img src="/img/running-man-2-64.png" alt="">
             </div>
-            <div>
-
+            <div class="header__representative representative">
+                <div class="representative__title">
+                    Официальный представитель
+                </div>
+                <div class="representative__subtitle">
+                    Garmin, Polar, Suunto
+                </div>
+            </div>
+            <div class="header__phone phone">
+                <div class="phone__number">
+                    +7 (499) 922-89-74
+                </div>
+                <button class="phone__button button">
+                    заказать звонок
+                </button>
             </div>
         </header>
+        <main class="main container">
+            <div class="main__banner">
+                <div class="main__header">
+                    <div class="main__title">
+                        Подбор пульсометра
+                    </div>
+                    <div class="main_subtitle">
+                        с учётом Вашего уровня подготовки
+                    </div>
+                </div>
+                <div class="main__advantage advantage">
+                    <div class="advantage__item">
+                        <div class="advantage__image">
+                            <img src="/img/icon/019_timer_time_stopwatch_2-64.png" alt="">
+                        </div>
+                        <div class="advantage__description">
+                            Время подбора: 10 минут
+                        </div>
+                    </div>
+                    <div class="advantage__item">
+                        <div class="advantage__image">
+                            <img src="/img/icon/app 08 hand cart 64.png" alt="">
+                        </div>
+                        <div class="advantage__description">
+                            Бесплатная доставка
+                        </div>
+                    </div>
+                    <div class="advantage__item">
+                        <div class="advantage__image">
+                            <img src="/img/icon/messages 64.png" alt="">
+                        </div>
+                        <div class="advantage__description">
+                            Ответим на все вопросы
+                        </div>
+                    </div>
+                </div>
+                <div class="main__order">
+                    <button class="main__button button">
+                        заказать кОНСУЛЬТАЦИЮ
+                    </button>
+                    <div class="main__link-catalog">
+                        или ПЕРЕЙТИ В КАТАЛОГ
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 </html>
