--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
             </div>
         </header>
         <main class="main container">
-            <div class="main__banner">
-                <div class="main__header">
-                    <div class="main__title">
+            <div class="main-screen">
+                <div class="main-screen__header">
+                    <div class="main-screen__title">
                         Подбор пульсометра
                     </div>
-                    <div class="main_subtitle">
+                    <div class="main-screen__subtitle">
                         с учётом Вашего уровня подготовки
                     </div>
                 </div>
-                <div class="main__advantage advantage">
+                <div class="main-screen__advantage advantage">
                     <div class="advantage__item">
                         <div class="advantage__image">
                             <img src="/img/icon/019_timer_time_stopwatch_2-64.png" alt="">
@@ -69,14 +69,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="main__order">
-                    <button class="main__button button">
+                <div class="main-screen__order">
+                    <button class="main-screen__button button button_order">
                         заказать кОНСУЛЬТАЦИЮ
                     </button>
-                    <div class="main__link-catalog">
-                        или ПЕРЕЙТИ В КАТАЛОГ
+                    <div class="main-screen__link-catalog">
+                        или <span>ПЕРЕЙТИ В КАТАЛОГ</span>
                     </div>
                 </div>
+            </div>
+            <div class="main__banner main-banner ibg">
+                <img src="img/bg.jpg" alt="">
             </div>
         </main>
     </div>
