--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 </head>
 <body>
     <div class="wrapper">
-        <header class="header container">
-            <div class="header__logo">
-                <img src="/img/running-man-2-64.png" alt="">
-            </div>
-            <div class="header__representative representative">
-                <div class="representative__title">
-                    Официальный представитель
+        <div class="banner-block container">
+            <header class="header container">
+                <div class="header__logo">
+                    <img src="/img/running-man-2-64.png" alt="">
                 </div>
-                <div class="representative__subtitle">
-                    Garmin, Polar, Suunto
+                <div class="header__representative representative">
+                    <div class="representative__title">
+                        Официальный представитель
+                    </div>
+                    <div class="representative__subtitle">
+                        Garmin, Polar, Suunto
+                    </div>
                 </div>
-            </div>
-            <div class="header__phone phone">
-                <div class="phone__number">
-                    +7 (499) 922-89-74
+                <div class="header__phone phone">
+                    <div class="phone__number">
+                        +7 (499) 922-89-74
+                    </div>
+                    <button class="phone__button button">
+                        заказать звонок
+                    </button>
                 </div>
-                <button class="phone__button button">
-                    заказать звонок
-                </button>
-            </div>
-        </header>
-        <main class="main container">
+            </header>
             <div class="main-screen">
                 <div class="main-screen__header">
                     <div class="main-screen__title">
@@ -81,6 +81,9 @@
             <div class="main__banner main-banner ibg">
                 <img src="img/bg.jpg" alt="">
             </div>
+        </div>
+        <main class="main container">
+            
         </main>
     </div>
 </body>
